Moved classes to header

--- a/y-exclamation-mark-parser/y-exclamation-mark-parser.vcxproj
+++ b/y-exclamation-mark-parser/y-exclamation-mark-parser.vcxproj
@@ -63,6 +63,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="debugIF.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="types.cpp" />
   </ItemGroup>
