--- a/y-exclamation-mark-parser/y-exclamation-mark-parser.vcxproj.filters
+++ b/y-exclamation-mark-parser/y-exclamation-mark-parser.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="types.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="debugIF.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
