--- a/y-exclamation-mark-parser/y-exclamation-mark-parser.vcxproj
+++ b/y-exclamation-mark-parser/y-exclamation-mark-parser.vcxproj
@@ -64,6 +64,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="debugIF.cpp" />
+    <ClCompile Include="llvmir.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="types.cpp" />
   </ItemGroup>
