--- a/y-exclamation-mark-parser/y-exclamation-mark-parser.vcxproj.filters
+++ b/y-exclamation-mark-parser/y-exclamation-mark-parser.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="llvmir.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="c99out.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
