Added The Feature

--- a/y-exclamation-mark-parser/y-exclamation-mark-parser.vcxproj
+++ b/y-exclamation-mark-parser/y-exclamation-mark-parser.vcxproj
@@ -63,6 +63,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\y! code\testa.c">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="..\y! code\testb.c">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="c99out.cpp" />
     <ClCompile Include="debugIF.cpp" />
     <ClCompile Include="llvmir.cpp" />
