--- a/y-exclamation-mark-parser/y-exclamation-mark-parser.vcxproj.filters
+++ b/y-exclamation-mark-parser/y-exclamation-mark-parser.vcxproj.filters
@@ -43,5 +43,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="..\y! code\main.y" />
+    <None Include="..\y! code\temp.y" />
   </ItemGroup>
 </Project>
