--- a/y-exclamation-mark-parser/y-exclamation-mark-parser.vcxproj
+++ b/y-exclamation-mark-parser/y-exclamation-mark-parser.vcxproj
@@ -81,6 +81,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="..\y! code\main.y" />
+    <None Include="..\y! code\temp.y" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
